--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         .container {
             text-align: center;
-            max-width: 600px;
-            padding: 20px;
+            max-width: 400px; /* Reduced the maximum width */
+            padding: 15px; /* Reduced padding */
             border-radius: 15px;
             box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
             background: rgba(0, 0, 0, 0.5);
@@ -31,16 +31,16 @@
         }
 
         .message {
-            font-size: 1.5em;
-            margin-top: 20px;
+            font-size: 1.2em; /* Adjusted font size for smaller container */
+            margin-top: 15px; /* Reduced top margin */
         }
 
         .loader {
             border: 4px solid #f3f3f3;
             border-top: 4px solid #3498db;
             border-radius: 50%;
-            width: 30px;
-            height: 30px;
+            width: 25px; /* Reduced loader size */
+            height: 25px;
             animation: spin 1s linear infinite;
             margin: auto;
         }
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Telegram Join Date Checker!</h1>
+        <h1>Flow : Beyond</h1>
         <h3 id="loading">Fetching your join date...</h3>
         <div id="loader" class="loader"></div>
         <p id="message" class="message"></p>
