--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram Join Date Checker</title>
+    <title>Telegram</title>
     <style>
         /* Gradient background and font styling */
         body, html {
@@ -73,7 +73,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Telegram Join Date Checker!</h1>
+        <h1>Welcome To "Flow : Beyond"</h1>
         <h3 id="loading">Fetching your join date...</h3>
         <div id="loader" class="loader"></div>
         <p id="message" class="message"></p>
