--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram</title>
+    <title>Telegram Join Date Checker</title>
     <style>
-        /* Gradient background and font styling */
         body, html {
             height: 100%;
             margin: 0;
@@ -15,17 +14,17 @@
             justify-content: center;
             align-items: center;
             color: #ffffff;
-            flex-direction: column; /* Center container and button */
+            flex-direction: column;
         }
 
         .container {
             text-align: center;
-            max-width: 500px; /* Slightly increased width */
-            padding: 20px; /* Increased padding */
+            max-width: 500px;
+            padding: 20px;
             border-radius: 15px;
             box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
             background: rgba(0, 0, 0, 0.5);
-            margin-bottom: 20px; /* Space for Close button */
+            margin-bottom: 20px;
         }
 
         h1, h3 {
@@ -33,7 +32,7 @@
         }
 
         .message {
-            font-size: 1.3em; /* Slightly larger font size */
+            font-size: 1.3em;
             margin-top: 20px;
         }
 
@@ -92,6 +91,7 @@
 
             const userId = tg.initDataUnsafe.user.id;
 
+            // Correct API call and data handling in JavaScript
             async function getCreationDate(id) {
                 const url = "https://restore-access.indream.app/regdate";
                 const headers = {
@@ -121,6 +121,7 @@
                 }
             }
 
+            // Calculate and format join date in JavaScript
             try {
                 const joinDate = await getCreationDate(userId);
 
@@ -141,9 +142,9 @@
                     let message = "";
 
                     if (diffYears > 0) {
-                        message = `You Joined Telegram since ${diffYears} year${diffYears > 1 ? "s" : ""} and ${diffMonths} month${diffMonths > 1 ? "s" : ""} ago!`;
+                        message = `You Joined Telegram Approximately ${diffYears} year${diffYears > 1 ? "s" : ""} and ${diffMonths} month${diffMonths > 1 ? "s" : ""} ago!`;
                     } else {
-                        message = `You Joined Telegram since ${diffMonths} month${diffMonths > 1 ? "s" : ""} ago!`;
+                        message = `You Joined Telegram Approximately ${diffMonths} month${diffMonths > 1 ? "s" : ""} ago!`;
                     }
 
                     document.getElementById('message').textContent = message;
